--- a/template-homenet-design-complete-buttons.html
+++ b/template-homenet-design-complete-buttons.html
@@ -66,13 +66,102 @@ button {margin: 20px;
 
                 <button class="homenet-btn button-favorite active"><svg class="save" xmlns="http://www.w3.org/2000/svg" viewBox="316.6 114.3 23.8 20"><path class="heart-fill"  d="M327.1 117.8c-1.4-1.2-2.8-2.3-4.2-2.3-2.4 0-4.4 1.7-4.9 4.4-.9 4.3 2 10.1 10.5 13.4 8.5-3.4 11.5-9.1 10.6-13.4-.5-2.6-2.4-4.3-4.9-4.3-1.3 0-2.6 1.1-4.1 2.2-.4.3-.8.6-1.1.9-.1.1-.2.1-.4.1-.1 0-.3 0-.4-.1-.3-.2-.6-.5-.9-.7l-.2-.2z"/><path class="heart" d="M328.5 134.3h-.2c-9.2-3.6-12.5-9.9-11.5-14.7.6-3.1 3-5.3 6.1-5.3 1.3 0 2.8 1.1 4.4 2.2.4.3.8.6 1.1.8h.2c.6-.3.9-.6 1.3-.8 1.4-1.1 2.9-2.1 4.3-2.1 3 0 5.4 2 6.1 5.2 1 4.8-2.1 11.2-11.4 14.7h-.4zm-5.6-18.9c-2.4 0-4.4 1.7-4.9 4.4-.9 4.3 2 10.1 10.5 13.4 8.5-3.4 11.5-9.1 10.6-13.4-.5-2.6-2.4-4.3-4.9-4.3-1.3 0-2.6 1.1-4.1 2.2-.4.3-.8.6-1.1.9-.1.1-.2.1-.4.1-.1 0-.3 0-.4-.1-.3-.2-.6-.5-.9-.7l-.2-.2c-1.4-1.2-2.9-2.3-4.2-2.3z"/></svg><span>Save</span></button>
 
-                
+                <div class="homenet-btn profile-btn call "><div class="profile-btn-icon call-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="236.4 146.3 42 42"><path fill="#20A120" d="M257.4 188.3c-11.6 0-21-9.4-21-21s9.4-21 21-21 21 9.4 21 21-9.4 21-21 21zm0-39.7c-10.3 0-18.6 8.3-18.6 18.6s8.3 18.6 18.6 18.6 18.6-8.3 18.6-18.6c0-10.2-8.3-18.5-18.6-18.6zm11.3 24.5c-.1-.2-.5-.5-1.2-.8l-.8-.5-1-.6-.8-.5-.4-.3-.6-.3c-.1-.1-.3-.1-.4-.1-.2 0-.5.1-.8.5s-.6.6-.9 1c-.3.3-.5.7-.8 1-.3.3-.6.5-.7.5-.1 0-.2 0-.4-.1l-.3-.1-.4-.2-.3-.2c-1.5-.8-2.7-1.7-3.7-2.8-1-1-2-2.3-2.8-3.7-.1-.1-.1-.2-.2-.3l-.2-.4c0-.1-.1-.2-.1-.3 0-.1-.1-.3-.1-.4 0-.2.1-.4.5-.7.3-.3.6-.6 1-.8.4-.3.7-.6 1-.9.3-.3.5-.6.5-.8 0-.2 0-.3-.1-.4l-.3-.6-.3-.4-.5-.8-.6-1-.5-.8c-.4-.7-.7-1.2-.8-1.2h-.3c-.3 0-.7.1-1.1.2-.5.1-.8.2-1.1.3-.5.2-1.1.9-1.7 2-.6 1-.8 2-.8 2.9 0 .3 0 .6.1.8 0 .3.1.6.2.9l.2.8.3.9.3.8c.3 1 .8 1.9 1.3 2.8.8 1.4 2 2.8 3.4 4.2 1.4 1.4 2.9 2.6 4.2 3.4.9.5 1.8 1 2.8 1.3l.8.3.9.3.8.2c.3.1.6.2.9.2.3 0 .6.1.8.1 1 0 2-.3 2.9-.8 1.1-.6 1.7-1.2 2-1.7.1-.4.3-.7.3-1.1.1-.4.1-.7.1-1.1-.2-.5-.2-.6-.3-.7z"/></svg></div>
+                        <span class="number-hidden">
+                            Call Me Now
+                        </span>
+                        <span class="number-reveal">
+                            Mobile 6622 4400
+                        </span>
+                    </div>
+
+
+                 <div class="homenet-btn profile-btn call active"><div class="profile-btn-icon call-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="236.4 146.3 42 42"><path fill="#20A120" d="M257.4 188.3c-11.6 0-21-9.4-21-21s9.4-21 21-21 21 9.4 21 21-9.4 21-21 21zm0-39.7c-10.3 0-18.6 8.3-18.6 18.6s8.3 18.6 18.6 18.6 18.6-8.3 18.6-18.6c0-10.2-8.3-18.5-18.6-18.6zm11.3 24.5c-.1-.2-.5-.5-1.2-.8l-.8-.5-1-.6-.8-.5-.4-.3-.6-.3c-.1-.1-.3-.1-.4-.1-.2 0-.5.1-.8.5s-.6.6-.9 1c-.3.3-.5.7-.8 1-.3.3-.6.5-.7.5-.1 0-.2 0-.4-.1l-.3-.1-.4-.2-.3-.2c-1.5-.8-2.7-1.7-3.7-2.8-1-1-2-2.3-2.8-3.7-.1-.1-.1-.2-.2-.3l-.2-.4c0-.1-.1-.2-.1-.3 0-.1-.1-.3-.1-.4 0-.2.1-.4.5-.7.3-.3.6-.6 1-.8.4-.3.7-.6 1-.9.3-.3.5-.6.5-.8 0-.2 0-.3-.1-.4l-.3-.6-.3-.4-.5-.8-.6-1-.5-.8c-.4-.7-.7-1.2-.8-1.2h-.3c-.3 0-.7.1-1.1.2-.5.1-.8.2-1.1.3-.5.2-1.1.9-1.7 2-.6 1-.8 2-.8 2.9 0 .3 0 .6.1.8 0 .3.1.6.2.9l.2.8.3.9.3.8c.3 1 .8 1.9 1.3 2.8.8 1.4 2 2.8 3.4 4.2 1.4 1.4 2.9 2.6 4.2 3.4.9.5 1.8 1 2.8 1.3l.8.3.9.3.8.2c.3.1.6.2.9.2.3 0 .6.1.8.1 1 0 2-.3 2.9-.8 1.1-.6 1.7-1.2 2-1.7.1-.4.3-.7.3-1.1.1-.4.1-.7.1-1.1-.2-.5-.2-.6-.3-.7z"/></svg></div>
+                        <span class="number-hidden">
+                            Call Me Now
+                        </span>
+                        <span class="number-reveal fade-in">
+                            <a href="tel:+85266123456">+852 6612 3456</a>
+                        </span>
+                </div>
+
+                <div class="homenet-btn profile-btn whatsapp"><div class="profile-btn-icon whatsapp-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path fill-rule="evenodd" clip-rule="evenodd" fill="#25D366" d="M85.3 14.5C75.9 5.2 63.5 0 50.2 0 22.9 0 .7 22.2.7 49.5c0 8.7 2.3 17.3 6.6 24.8L.3 100l26.3-6.9c7.2 3.9 15.4 6 23.7 6 27.3 0 49.5-22.2 49.6-49.6-.1-13.2-5.3-25.6-14.6-35M50.2 90.8c-7.4 0-14.7-2-21-5.7l-1.5-.9-15.6 4.1L16.3 73l-1-1.6C11.2 64.9 9 57.3 9 49.6 9 26.8 27.5 8.4 50.2 8.4c11 0 21.3 4.3 29.1 12.1 7.8 7.8 12.1 18.1 12.1 29.1 0 22.7-18.5 41.2-41.2 41.2m22.6-30.9c-1.2-.6-7.3-3.6-8.5-4s-2-.6-2.8.6c-.8 1.2-3.2 4-3.9 4.9-.7.8-1.4.9-2.7.3s-5.2-1.9-10-6.1c-3.7-3.3-6.2-7.3-6.9-8.6-.7-1.2-.1-1.9.5-2.5.6-.6 1.2-1.4 1.9-2.2.6-.7.8-1.2 1.2-2.1.4-.8.2-1.5-.1-2.2s-2.8-6.7-3.8-9.2c-1-2.4-2-2.1-2.8-2.1h-2.4c-.9 0-2.2.3-3.3 1.5-1.1 1.2-4.3 4.2-4.3 10.3s4.4 12 5.1 12.8c.6.8 8.7 13.3 21.2 18.7 3 1.3 5.3 2 7.1 2.6 3 .9 5.7.8 7.8.5 2.4-.4 7.3-3 8.4-5.9 1-2.9 1-5.4.7-5.9-.3-.4-1.2-.8-2.4-1.4"></path></svg></div>
+                        <span>
+                            Whatsapp
+                        </span>
+                    </div>
+
+
+                 <a href="https://www.google.com/maps/dir//1+King's+Rd,+Causeway+Bay/" target="_blank" rel="nofollow" class="homenet-btn profile-btn find"><div class="profile-btn-icon find-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"><path d="M15 30C6.7 30 0 23.3 0 15S6.7 0 15 0s15 6.7 15 15-6.7 15-15 15zm0-28.3C7.7 1.7 1.7 7.7 1.7 15s6 13.3 13.3 13.3 13.3-6 13.3-13.3S22.3 1.7 15 1.7z"/><path class="needle"  d="M12.1 12.7l-4.4 9.5 9.5-4.4 4.4-9.5-9.5 4.4zm2.6 3.8c-.7 0-1.3-.6-1.3-1.3 0-.7.6-1.3 1.3-1.3.7 0 1.3.6 1.3 1.3-.1.7-.6 1.3-1.3 1.3z"/></svg></div>
+                        <span>
+                            Find Me
+                        </span>
+                    </a>
+
+
+
+                 <div class="homenet-btn source-box-btn call"><div class="icon call-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="236.4 146.3 42 42"><path fill="#20A120" d="M257.4 188.3c-11.6 0-21-9.4-21-21s9.4-21 21-21 21 9.4 21 21-9.4 21-21 21zm0-39.7c-10.3 0-18.6 8.3-18.6 18.6s8.3 18.6 18.6 18.6 18.6-8.3 18.6-18.6c0-10.2-8.3-18.5-18.6-18.6zm11.3 24.5c-.1-.2-.5-.5-1.2-.8l-.8-.5-1-.6-.8-.5-.4-.3-.6-.3c-.1-.1-.3-.1-.4-.1-.2 0-.5.1-.8.5s-.6.6-.9 1c-.3.3-.5.7-.8 1-.3.3-.6.5-.7.5-.1 0-.2 0-.4-.1l-.3-.1-.4-.2-.3-.2c-1.5-.8-2.7-1.7-3.7-2.8-1-1-2-2.3-2.8-3.7-.1-.1-.1-.2-.2-.3l-.2-.4c0-.1-.1-.2-.1-.3 0-.1-.1-.3-.1-.4 0-.2.1-.4.5-.7.3-.3.6-.6 1-.8.4-.3.7-.6 1-.9.3-.3.5-.6.5-.8 0-.2 0-.3-.1-.4l-.3-.6-.3-.4-.5-.8-.6-1-.5-.8c-.4-.7-.7-1.2-.8-1.2h-.3c-.3 0-.7.1-1.1.2-.5.1-.8.2-1.1.3-.5.2-1.1.9-1.7 2-.6 1-.8 2-.8 2.9 0 .3 0 .6.1.8 0 .3.1.6.2.9l.2.8.3.9.3.8c.3 1 .8 1.9 1.3 2.8.8 1.4 2 2.8 3.4 4.2 1.4 1.4 2.9 2.6 4.2 3.4.9.5 1.8 1 2.8 1.3l.8.3.9.3.8.2c.3.1.6.2.9.2.3 0 .6.1.8.1 1 0 2-.3 2.9-.8 1.1-.6 1.7-1.2 2-1.7.1-.4.3-.7.3-1.1.1-.4.1-.7.1-1.1-.2-.5-.2-.6-.3-.7z"/></svg></div>
+                        <span class="number-hidden">
+                            Call Owner Now
+                        </span>
+                        <span class="number-reveal">
+                            Mobile 6622 4400
+                        </span>
+                    </div>
+
+                 <div class="homenet-btn source-box-btn call active"><div class="icon call-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="236.4 146.3 42 42"><path fill="#20A120" d="M257.4 188.3c-11.6 0-21-9.4-21-21s9.4-21 21-21 21 9.4 21 21-9.4 21-21 21zm0-39.7c-10.3 0-18.6 8.3-18.6 18.6s8.3 18.6 18.6 18.6 18.6-8.3 18.6-18.6c0-10.2-8.3-18.5-18.6-18.6zm11.3 24.5c-.1-.2-.5-.5-1.2-.8l-.8-.5-1-.6-.8-.5-.4-.3-.6-.3c-.1-.1-.3-.1-.4-.1-.2 0-.5.1-.8.5s-.6.6-.9 1c-.3.3-.5.7-.8 1-.3.3-.6.5-.7.5-.1 0-.2 0-.4-.1l-.3-.1-.4-.2-.3-.2c-1.5-.8-2.7-1.7-3.7-2.8-1-1-2-2.3-2.8-3.7-.1-.1-.1-.2-.2-.3l-.2-.4c0-.1-.1-.2-.1-.3 0-.1-.1-.3-.1-.4 0-.2.1-.4.5-.7.3-.3.6-.6 1-.8.4-.3.7-.6 1-.9.3-.3.5-.6.5-.8 0-.2 0-.3-.1-.4l-.3-.6-.3-.4-.5-.8-.6-1-.5-.8c-.4-.7-.7-1.2-.8-1.2h-.3c-.3 0-.7.1-1.1.2-.5.1-.8.2-1.1.3-.5.2-1.1.9-1.7 2-.6 1-.8 2-.8 2.9 0 .3 0 .6.1.8 0 .3.1.6.2.9l.2.8.3.9.3.8c.3 1 .8 1.9 1.3 2.8.8 1.4 2 2.8 3.4 4.2 1.4 1.4 2.9 2.6 4.2 3.4.9.5 1.8 1 2.8 1.3l.8.3.9.3.8.2c.3.1.6.2.9.2.3 0 .6.1.8.1 1 0 2-.3 2.9-.8 1.1-.6 1.7-1.2 2-1.7.1-.4.3-.7.3-1.1.1-.4.1-.7.1-1.1-.2-.5-.2-.6-.3-.7z"/></svg></div>
+                        <span class="number-hidden">
+                            Call Owner Now
+                        </span>
+                        <span class="number-reveal fade-in">
+                            <a href="tel:+85266123456">+852 6612 3456</a>
+                        </span>
+                    </div>
+
+
+                    <a class="homenet-btn source-box-btn whatsapp"><div class="icon whatsapp-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 418.9 420.9"><path fill-rule="evenodd" clip-rule="evenodd" fill="#455A64" d="M357.8 61.2C318.5 21.7 266.1 0 210.3 0 95.4 0 1.8 93.6 1.7 208.5c0 36.8 9.6 72.6 27.8 104.3L0 420.9l110.6-29c30.5 16.6 64.8 25.4 99.7 25.4h.1c114.9 0 208.5-93.6 208.6-208.6-.1-55.7-21.8-108.1-61.2-147.5M210.3 382c-31.2 0-61.7-8.4-88.3-24.2l-6.3-3.8-65.6 17.2 17.5-64-4.1-6.6C46.1 273 37 241.1 37 208.3 37 113 114.8 35.2 210.4 35.2c46.3 0 89.8 18.1 122.6 50.8 32.7 32.8 50.7 76.3 50.7 122.6-.1 95.7-77.9 173.4-173.4 173.4m95.1-129.8c-5.2-2.6-30.8-15.2-35.6-17-4.8-1.7-8.3-2.6-11.7 2.6-3.5 5.2-13.5 17-16.5 20.4-3 3.5-6.1 3.9-11.3 1.3-5.2-2.6-22-8.1-41.9-25.9-15.5-13.8-26-30.9-29-36.1-3-5.2-.3-8 2.3-10.6 2.3-2.3 5.2-6.1 7.8-9.1 2.6-3 3.5-5.2 5.2-8.7 1.7-3.5.9-6.5-.4-9.1-1.3-2.6-11.7-28.3-16.1-38.7-4.2-10.2-8.5-8.8-11.7-8.9-3-.2-6.5-.2-10-.2s-9.1 1.3-13.9 6.5c-4.8 5.2-18.2 17.8-18.2 43.5s18.7 50.4 21.3 53.9 36.7 56.1 89 78.7c12.4 5.4 22.1 8.6 29.7 11 12.5 4 23.8 3.4 32.8 2.1 10-1.5 30.8-12.6 35.2-24.8 4.3-12.2 4.3-22.6 3-24.8-1.3-2.2-4.8-3.5-10-6.1"/></svg></div>
+                            <span>
+                                WhatsApp
+                            </span>
+                        </a>
 
 
             <div class="sole-agent"><span>
                 SOLE AGENT</span>
             </div>
-        </div>
+
+            <div class="process">
+            <button class="process-btn back">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="15.5 14.5 23 23";><path  d="M38.5 26l-23 11.5L23.4 26l-7.9-11.5 23 11.5z"/></svg>
+            </button>
+            <span>Back</span>
+            </div>
+
+            <div class="process complete">
+            <button class="process-btn next">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="15.5 14.5 23 23"><path  d="M38.5 26l-23 11.5L23.4 26l-7.9-11.5 23 11.5z"/></svg>
+            </button>
+            <span>Next</span>
+            </div>
+
+            <div class="process incomplete">
+            <button class="process-btn next">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="15.5 14.5 23 23"><path  d="M38.5 26l-23 11.5L23.4 26l-7.9-11.5 23 11.5z"/></svg>
+            </button>
+            <span>Next</span>
+            </div>
+
+
+
+            
+
 
 </body>
 
