--- a/listing-mockup.html
+++ b/listing-mockup.html
@@ -15,6 +15,7 @@
 <body>
 
 <main class="ant-layout-content">
+
     <div class="listing-banner-container ">
         <div class="listing-banner center-banner featured">
             <div class="b-left side-img image4">
@@ -48,19 +49,40 @@
                 </div>
             </div>
         </div>
-    </div>
-
-<div class="listing-top"><div class="ant-row listing-content">
-<div class="ant-col ant-col-xl-16 ant-col-md-order-1">a</div> 
 </div>
+
+
+<div class="listing-top">
+    <div class="ant-row listing-content">
+        <div class="ant-col-24">
+            <div class="test-content-top">top row full</div>
+        </div>
+    </div>
 </div>
 
 <div class="ant-row listing-content">
-<div class="ant-col ant-col-xl-8 ant-col-md-order-2">b</div>
-<div class="ant-col ant-col-xl-16 ant-col-md-order-1">a</div>
-</div>
+        <div class="ant-col-24 ant-col-xl-8 ant-col-xl-order-2">
+            <div class="ant-row">
+                <div class="ant-col-8 ant-col-xl-24">
+                    <div class="test-content2 avatar">avatar</div>
+                </div>
 
 
+                <div class="ant-col-16  ant-col-xl-24 ant-row">
+                                <div class="ant-col-24">
+                                    <div class="test-content3 name">side</div>
+                                </div>
+                                <div class="ant-col-24">
+                                    <div class="test-content4 detail">side</div>
+                                </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="ant-col-24 ant-col-xl-16 ant-col-xl-order-1">
+            <div class="test-content1 full-page">content</div>
+        </div>
+    </div>
 
 
 </main>
