--- a/template-homenet-design-complete-buttons.html
+++ b/template-homenet-design-complete-buttons.html
@@ -7,12 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="assets/favicon.ico">
     <title>Homenet Design - Buttons Completed</title>
+    <!-- Ant design for conflict test -->
     <link rel="stylesheet" href="assets/css/ant/ant-design.css">
     <link rel="stylesheet" href="assets/css/ant/ant-design-layout.css">
+    <!-- Global Style for React -->
+    <link rel="stylesheet" href="assets/css/Global.style.css">
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/buttons-px-font.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" media="print" onload="this.media='all'">
 </head>
 
 <body class="en">
@@ -28,17 +33,19 @@ body {
 }
 button {margin: 20px;
 }
+.circle-social {margin: 3px;
+}
 </style>
 
                 <button class="homenet-btn button-contact"><span>Contact</span></button>
 
                 <button class="homenet-btn button-search"><span>Search</span></button>
 
-                <button class="homenet-btn button-dashboard"><span>Start Now</span></button>
+                <button class="homenet-btn button-dashboard font-second"><span>Start Now</span></button>
 
                 <button class="homenet-btn button-msg-send"><span>Send Message</span></button>
 
-                <button class="homenet-btn button-verify"><span>Verify Via SMS</span></button>
+                <button class="homenet-btn button-verify font-second"><span>Verify Via SMS</span></button>
 
                 <button class="homenet-btn button-popup confirm"><span>Confirm</span></button>
 
@@ -48,15 +55,15 @@ button {margin: 20px;
 
                 <button class="homenet-btn button-action save"><span>Save</span></button>
 
-                <button class="homenet-btn button-bordered view-profile"><span>View Profile</span></button>
+                <button class="homenet-btn button-bordered font-second view-profile"><span>View Profile</span></button>
 
-                <button class="homenet-btn button-bordered verify"><span>Add Verification</span></button>
+                <button class="homenet-btn button-bordered font-second verify"><span>Add Verification</span></button>
 
-                <button class="homenet-btn button-bordered-rnd change-pic"><span>Change UserPic</span></button>
+                <button class="homenet-btn button-bordered-rnd font-second change-pic"><span>Change UserPic</span></button>
 
-                <button class="homenet-btn button-bordered-rnd delete-pic"><span>Delete UserPic</span></button>
+                <button class="homenet-btn button-bordered-rnd font-second delete-pic"><span>Delete UserPic</span></button>
 
-                <button class="homenet-btn button-bordered-rnd save-note"><span>Save Note</span></button>
+                <button class="homenet-btn button-bordered-rnd font-second save-note"><span>Save Note</span></button>
 
                 <button class="homenet-btn search-btn more-filters"><span>More Filters</span></button>
 
@@ -133,7 +140,7 @@ button {margin: 20px;
                         </a>
 
 
-            <div class="sole-agent"><span>
+            <div class="sole-agent font-second"><span>
                 SOLE AGENT</span>
             </div>
 
@@ -159,8 +166,24 @@ button {margin: 20px;
             </div>
 
 
+          <br>  
 
-            
+
+          <div class="circle-social twitter" role="button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M34.2 84.7C66.4 84.7 84 58 84 34.8c0-.8 0-1.5-.1-2.3 3.4-2.5 6.4-5.6 8.7-9.1-3.1 1.4-6.5 2.3-10.1 2.8 3.6-2.2 6.4-5.6 7.7-9.7-3.4 2-7.1 3.5-11.1 4.3-3.2-3.4-7.8-5.5-12.8-5.5-9.7 0-17.5 7.8-17.5 17.5 0 1.4.2 2.7.5 4-14.6-.7-27.5-7.7-36.1-18.3-1.5 2.6-2.4 5.6-2.4 8.8 0 6.1 3.1 11.4 7.8 14.6-2.9-.1-5.6-.9-7.9-2.2v.2c0 8.5 6 15.6 14.1 17.2-1.5.4-3 .6-4.6.6-1.1 0-2.2-.1-3.3-.3 2.2 7 8.7 12 16.4 12.2-6 4.7-13.6 7.5-21.8 7.5-1.4 0-2.8-.1-4.2-.2 7.7 4.9 17 7.8 26.9 7.8"/></svg>
+        </div>
+
+
+        <div class="circle-social facebook" role="button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M64.44 19.61h8.31V5.14c-1.43-.2-6.36-.64-12.1-.64-11.98 0-20.18 7.53-20.18 21.38v12.74H27.25V54.8h13.22v40.7h16.21V54.8h12.68l2.01-16.18h-14.7V27.48c0-4.67 1.26-7.87 7.77-7.87z"/></svg>
+        </div><div class="circle-social whatsapp" role="button">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path fill-rule="evenodd" clip-rule="evenodd" d="M85.3 14.5C75.9 5.2 63.5 0 50.2 0 22.9 0 .7 22.2.7 49.5c0 8.7 2.3 17.3 6.6 24.8L.3 100l26.3-6.9c7.2 3.9 15.4 6 23.7 6 27.3 0 49.5-22.2 49.6-49.6-.1-13.2-5.3-25.6-14.6-35M50.2 90.8c-7.4 0-14.7-2-21-5.7l-1.5-.9-15.6 4.1L16.3 73l-1-1.6C11.2 64.9 9 57.3 9 49.6 9 26.8 27.5 8.4 50.2 8.4c11 0 21.3 4.3 29.1 12.1 7.8 7.8 12.1 18.1 12.1 29.1 0 22.7-18.5 41.2-41.2 41.2m22.6-30.9c-1.2-.6-7.3-3.6-8.5-4s-2-.6-2.8.6c-.8 1.2-3.2 4-3.9 4.9-.7.8-1.4.9-2.7.3s-5.2-1.9-10-6.1c-3.7-3.3-6.2-7.3-6.9-8.6-.7-1.2-.1-1.9.5-2.5.6-.6 1.2-1.4 1.9-2.2.6-.7.8-1.2 1.2-2.1.4-.8.2-1.5-.1-2.2s-2.8-6.7-3.8-9.2c-1-2.4-2-2.1-2.8-2.1h-2.4c-.9 0-2.2.3-3.3 1.5-1.1 1.2-4.3 4.2-4.3 10.3s4.4 12 5.1 12.8c.6.8 8.7 13.3 21.2 18.7 3 1.3 5.3 2 7.1 2.6 3 .9 5.7.8 7.8.5 2.4-.4 7.3-3 8.4-5.9 1-2.9 1-5.4.7-5.9-.3-.4-1.2-.8-2.4-1.4"/></svg>
+</div><div class="circle-social email" role="button">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M89.2 16.9H10.3l39.5 35.4L89.7 17c-.2 0-.3-.1-.5-.1z"/><path d="M51.9 59.2c-1.1 1-2.7 1-3.8 0L7.5 22.8v57c0 1.8 1.4 3.3 3 3.3h78.9c1.7 0 3-1.5 3-3.3V23.3L51.9 59.2z"/></svg>
+</div><div class="circle-social link" role="button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M86.4 13.6c-8.9-8.9-23.2-8.9-32.1 0L43 24.9c4.4-.8 9-.5 13.4.9l5.1-5.1c4.9-4.9 12.9-4.9 17.8 0s4.9 12.9 0 17.8L61.4 56.4c-4.9 4.9-12.9 4.9-17.8 0-2-2-3.2-4.6-3.5-7.2l-8 8c1.1 2.3 2.5 4.5 4.4 6.3 8.9 8.9 23.2 8.9 32.1 0l17.8-17.8c8.8-8.8 8.8-23.2 0-32.1zM63.9 36.1c-8.9-8.9-23.2-8.9-32.1 0L13.6 54.3c-8.9 8.9-8.9 23.2 0 32.1s23.2 8.9 32.1 0l11.6-11.7c-4.5.8-9 .5-13.4-.9l-5.4 5.5c-4.9 4.9-12.9 4.9-17.8 0s-4.9-12.9 0-17.8l18.2-18.2c4.9-4.9 12.9-4.9 17.8 0 2 2 3.2 4.5 3.5 7.2l5.4-5.4 2.6-2.6c-1-2.4-2.4-4.5-4.3-6.4z"/></svg></div>
+
+
+
 
 
 </body>
