--- a/listing-cards-ant2020.html
+++ b/listing-cards-ant2020.html
@@ -16,8 +16,11 @@
     <link rel="stylesheet" href="assets/css/listing-cards-final.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" media="print" onload="this.media='all'">
+    <link rel="preload" as="style"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700"
+        media="print" onload="this.media='all'">
 </head>
 
 <body class="en">
@@ -53,7 +56,7 @@
                                         <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
-                                <div class="date thin-zh">Listed 1 day</div>
+                                <div class="date thin-zh">NEW</div>
                             </div>
                             <div class="contact-container">
                                 <button class="homenet-btn button-contact thin-zh">Contact</button>
@@ -96,7 +99,7 @@
                                         <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
-                                <div class="date thin-zh">Listed 2 days</div>
+                                <div class="date thin-zh">1 hour ago</div>
                             </div>
                             <div class="contact-container">
                                 <button class="homenet-btn button-contact thin-zh">Contact</button>
@@ -112,7 +115,8 @@
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Kwong Sang Hong Grand Building Lodge">
                             <div class="special"></div>
-                            <img class="listing-img-top" src="demo/listings/3.jpg" alt="Kwong Sang Hong Grand Building Lodge">
+                            <img class="listing-img-top" src="demo/listings/3.jpg"
+                                alt="Kwong Sang Hong Grand Building Lodge">
                         </a>
                     </div>
                     <div class="listing-info">
@@ -122,7 +126,8 @@
                         </div>
                         <div class="title-source owner">
                             <h2 class="bdg-name thin-zh">
-                                <a href="#" title="Kwong Sang Hong Grand Building Lodge">Kwong Sang Hong Grand Building Lodge</a>
+                                <a href="#" title="Kwong Sang Hong Grand Building Lodge">Kwong Sang Hong Grand Building
+                                    Lodge</a>
                             </h2>
                             <div class="source font-second" title="Owner"><span>owner</span></div>
                         </div>
@@ -139,7 +144,7 @@
                                     </div>
                                 </div>
                                 <div class="date thin-zh">
-                                    Listed 7 days
+                                    12 hours ago
                                 </div>
                             </div>
                             <div class="contact-container">
@@ -183,7 +188,7 @@
                                         <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
-                                <div class="date thin-zh">Listed 1 month+</div>
+                                <div class="date thin-zh">1 day ago</div>
                             </div>
                             <div class="contact-container">
                                 <button class="homenet-btn button-contact thin-zh">Contact</button>
@@ -225,7 +230,7 @@
                                         <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
-                                <div class="date thin-zh">Listed 15 days</div>
+                                <div class="date thin-zh">7 days ago</div>
                             </div>
                             <div class="contact-container">
                                 <button class="homenet-btn button-contact thin-zh">Contact</button>
@@ -268,7 +273,7 @@
                                         <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
-                                <div class="date thin-zh">Listed 13 days</div>
+                                <div class="date thin-zh">365 days ago</div>
                             </div>
                             <div class="contact-container">
                                 <button class="homenet-btn button-contact thin-zh">Contact</button>
@@ -311,7 +316,7 @@
                                         <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
-                                <div class="date thin-zh">Listed 2 days</div>
+                                <div class="date thin-zh">415 days ago</div>
                             </div>
                             <div class="contact-container">
                                 <button class="homenet-btn button-contact thin-zh">Contact</button>
@@ -353,7 +358,7 @@
                                         <div class="ft">ft<span class="sq">²</span> net</div>
                                     </div>
                                 </div>
-                                <div class="date thin-zh">Listed 1 month+</div>
+                                <div class="date thin-zh">730 days ago</div>
                             </div>
                             <div class="contact-container">
                                 <button class="homenet-btn button-contact thin-zh">Contact</button>
